<resources>
    <string name="app_name">MovieMessager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="film_cover_not_found">film cover not found</string>
    <string name="login_btn">login</string>
    <string name="login_hint">input login</string>
    <string name="pass_hint">input password</string>
    <string name="email_hint">input email</string>
    <string name="reg_btn">registration</string>
    <string name="aunt_error">aunt error</string>
    <string name="try_again">try</string>
    <string name="Error_title">Error</string>
    <string name="Errorr_message">Connect to server</string>
    <string name="noname">NoName</string>
    <string name="favorite">FAVORITE</string>
    <string name="google_signin">Google Signin</string>
    <string name="comment">Comment</string>
    <string name="send_comment">send comment</string>
    <string name="something_went_wrong_please_try_again">Something went wrong. Please Try again</string>
</resources>