<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.moviemessager.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.moviemessager.ui.fragment.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.moviemessager.ui.fragment.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.moviemessager.ui.fragment.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.moviemessager.ui.fragment.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />


</navigation>