<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btLoginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_gravity="center"

        android:layout_margin="@dimen/space_24"
        android:background="@drawable/buttom_selector"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:text="Google Signin"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/google"
            app:layout_constraintBottom_toBottomOf="@+id/tvLoginGoogle"
            app:layout_constraintEnd_toStartOf="@+id/tvLoginGoogle"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvLoginGoogle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_49"
        android:layout_margin="@dimen/space_24"
        android:background="@drawable/corner_radius_edit_text"
        android:ems="10"
        android:hint="@string/login_hint"
        android:inputType="text"
        android:maxLength="20"
        android:padding="@dimen/view_padding_10"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPass"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_49"
        android:layout_margin="@dimen/space_24"
        android:background="@drawable/corner_radius_edit_text"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:padding="@dimen/view_padding_10"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLogin"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btLogin"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_gravity="center"

        android:layout_margin="@dimen/space_24"
        android:layout_marginEnd="51dp"
        android:background="@drawable/buttom_selector"
        android:enabled="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/space_24"
            android:text="@string/login_btn"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btReg"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_gravity="center"

        android:layout_margin="@dimen/space_24"
        android:background="@drawable/buttom_selector"
        android:enabled="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btLogin"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/space_24"
            android:text="@string/reg_btn"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/HintError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#DA0909"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLoginGoogle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="gone"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="209dp" />

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Authentication"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btLoginGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass" />

</androidx.constraintlayout.widget.ConstraintLayout>